# slither

./: .clang-format  .gitignore  CMakeLists.txt  HACKING.md  LICENSE  Makefile  README.md  ThirdPartyNotices.txt  slither-autostart.desktop  slither.desktop  slither.service  slither.spec  tasks.py
.copr/: Makefile
src/: configuration.cpp  configuration.h  gesture.cpp  gesture.h  gestureconverter.cpp  gestureconverter.h  gestureevent.cpp  gestureevent.h  gestureeventfactory.cpp  gesturesfile.cpp  gesturesfile.h  gesturewatcher.cpp  gesturewatcher.h  holdgestureevent.cpp  holdgestureevent.h  holdparser.cpp  holdparser.h  inputinjector.cpp  inputinjector.h  main.cpp  paths.cpp  pinchgestureevent.cpp  pinchgestureevent.h  pinchparser.cpp  pinchparser.h  standardpaths.cpp  standardpaths.h  swipe.h  swipeaction.cpp  swipeaction.h  swipegestureevent.cpp  swipegestureevent.h  swipemonitor.cpp  swipemonitor.h  swipeparser.cpp  swipeparser.h  swipetracker.cpp  swipetracker.h  utils.cpp  utils.h
src/core/: directorywatcher.cpp  directorywatcher.h  gesture.cpp  gesture.h  gestureevent.h  gestureeventfactory.h  gesturesfile.cpp  gesturesfile.h  gesturewatcher.cpp  holdgestureevent.cpp  inputinjector.cpp  inputinjector.h  paths.h  pinchgestureevent.cpp  pinchgestureevent.h  settings.cpp  settings.h  settingsfile.cpp  settingsfile.h  swipegestureevent.cpp  swipegestureevent.h  utilities.cpp  utilities.h
src/ui/: app.cpp  app.h  colors.cpp  colors.h  constants.h  directionstring.cpp  directionstring.h  gestureformdialog.cpp  gestureformdialog.h  gesturelistboxrow.cpp  gesturelistboxrow.h  gesturepage.cpp  gesturepage.h  gesturespage.cpp  gesturespage.h  gesturestring.cpp  gesturestring.h  mainframe.cpp  mainframe.h  mainpage.cpp  mainpage.h  mainstatusbar.cpp  mainstatusbar.h  mainwindow.cpp  mainwindow.h  settingspage.cpp  settingspage.h
test/: CMakeLists.txt  gesture_test.h  gestureeventfactory_test.h  gesturesfile_test.h  inputinjector_test.h  main.cpp  paths_test.h  pinchparser_test.h  standardpaths_test.h  swipeaction_test.h  swipeparser_test.h  swipetracker_test.h  ut.hpp  utilities_test.h  utils_test.cpp  utils_test.h
